  position on the zero-velocity curve for a given radius in this
  range.

- Added TriaxialGaussianPotential, the potential of a Gaussian that is
  stratified on triaxial ellipsoids (Emsellem et al. 1994). Useful for
  implementing multi-Gaussian expansions of galactic potentials.

- Added AnyAxisymmetricRazorThinDiskPotential, the potential of an
  arbitrary razor-thin, axisymmetric disk.

- Added inverse action-angle transformations for the isochrone
  potential (actionAngleIsochroneInverse) and for a one-dimensional
  harmonic oscillator (actionAngleHarmonicInverse; also added the
  [x,v] -> [J,O,a] transformation for the latter,
  actionAngleHarmonic).

- Added Potential.plotSurfaceDensity (potential.plotSurfaceDensities)
  method (function) to plot the surface density of a Potential
  instance (of Potential instance of a list of Potential instances).

- Re-implemented the DoubleExponentialDiskPotential in a simpler and
  more accurate manner, using the double-exponential formula (no
  relation) for integrals of Bessel functions from Ogata 2005. The
  DoubleExponentialDiskPotential is now calculated to ~machine
  precision almost everywhere and there is no longer any switch to a
  Keplerian behavior at large R.

- Made potentials as much as possible numerically stable at r=0 and
  r=numpy.inf (i.e., they don't give NaN). Still a few missing, but
  the majority of potentials are well behaved now.

- Fixed angle calculation for actionAngleIsochrone and
  actionAngleSpherical for non-inclined orbits (which are tricky).

- Replace Quantity parsing through the package as much as possible
  with a set of centralized parsers (#430).

- Renamed galpy.util.bovy_coords to galpy.util.coords,
  galpy.util.bovy_conversion to galpy.util.conversion, and
  galpy.util.bovy_plot to galpy.util.plot (but old 'from galpy.util
  import bovy_X' will keep working for now). Also renamed some other
  internal utility modules in the same way (bovy_symplecticode,