@@ -1,0 +1,5 @@
+Arbitrary spherical density potential
+======================================
+
+.. autoclass:: galpy.potential.AnySphericalPotential
+   :members: __init__
