@@ -34,6 +34,9 @@ v1.7 (XXXX-XX-XX)
 - Added AnyAxisymmetricRazorThinDiskPotential, the potential of an
   arbitrary razor-thin, axisymmetric disk.
 
+- Added AnySphericalPotential, the potential of an arbitrary spherical
+  density distribution.
+
 - Added inverse action-angle transformations for the isochrone
   potential (actionAngleIsochroneInverse) and for a one-dimensional
   harmonic oscillator (actionAngleHarmonicInverse; also added the
